# ProjectMCP

./: README.md  pyproject.toml
src/project_mcp/: __init__.py  server.py
src/project_mcp/data/: deliverable_planning.md  pr_raising.md  project_planning.md  sprint_recap.md
