[project]
name = "project-mcp"
version = "0.1.0"
description = "A project-aware MCP server for GitHub Copilot workflow automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
project-mcp = "project_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/project_mcp"]
